--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_API_URL=http://nas.metalpha.io:7860/sdapi/v1/txt2img
-CHANGE_MODEL_API_URL=http://nas.metalpha.io:7860/sdapi/v1/options
+REACT_APP_API_URL=http://203.186.171.122:7860/sdapi/v1/txt2img
+CHANGE_MODEL_API_URL=http://203.186.171.122:7860/sdapi/v1/options
 ```
