--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^1.0.6",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
@@ -16,6 +17,7 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "ethereumjs-util": "^7.1.5",
+    "ethers": "^6.6.3",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
@@ -23,6 +25,7 @@
     "react-spinners": "^0.13.8",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
-    "web3": "^4.0.2"
+    "wagmi": "^1.3.8",
+    "web3": "^4.0.3"
   }
 }
